# meetings-enjoyer-backend

./: .dockerignore  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  api.py  calander.py  cloudbuild.yaml  deploy.sh  elevenlabs.py  initiate_call.py  main.py  package-lock.json  parse_meeting_info.py  pyproject.toml  requirements.txt  test_call.py  twillio_app.py
.github/workflows/: electron-build.yml
CalanderCheck/: CalendarCheck.py  Dockerfile  README.md  cloud-run-job.yaml  cloud_build.yaml  requirements.txt
apps/electron/: .gitignore  ARCHITECTURE.md  IMPROVEMENTS.md  INTEGRATION.md  Install.command  README.md  electron-builder.yml  index.html  install-lara-console.command  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/electron-mock/: README.md  package-lock.json  package.json  tsconfig.json
apps/electron-mock/src/: index.ts
apps/electron/src/main/: index.ts  ipc.ts  logger.ts  storage.ts
apps/electron/src/preload/: index.ts
apps/electron/src/renderer/: App.tsx
apps/electron/src/renderer/components/: AnswerCard.tsx  ChatPill.tsx  CollapsedPill.tsx  Controls.tsx  ExpandedDrawer.tsx  Header.tsx  JoinCallModal.tsx  NotificationPill.tsx  Settings.tsx  TasksQueue.tsx  Toast.tsx  Transcript.tsx
apps/electron/src/renderer/hooks/: useKeyboard.ts
apps/electron/src/renderer/services/: wsClient.ts
testutils/: test_websocket_client.py
transcriptions/: CA02e735d6414cd8d00ec2e78c8b300990.txt  CA7d371686833d7b07c25b42796436992c.txt  CAf2294f7499acdd9664e3c17cde35f7cf.txt
(+12 files in other folders)
