[project]
name = "meetings-enjoyer-backend"
version = "0.1.0"
description = "API that provides tools for V7, Eleven Labs, etc"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "python-dotenv",
    "pydantic",
    "fastapi",
    "uvicorn",
    "elevenlabs",
    "motor",
    "pymongo",
    "websockets",
    "google-generativeai",
]

[project.scripts]
start = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
